[package]
name = "bunyan"
version = "0.1.9"
authors = ["Luca Palmieri <rust@lpalmieri.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A CLI to pretty print structured logs. A Rust port of the original JavaScript bunyan CLI."
repository = "https://github.com/LukeMathWalker/bunyan"

[[bin]]
path = "src/main.rs"
name = "bunyan"

[lib]
path = "src/lib.rs"
name = "bunyan"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
chrono = { version = "0.4.39", default-features = false, features = ["serde", "clock"] }
atty = "0.2.14"
colored = "2.2.0"
itertools = "0.10.5"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "2.1.5"
